--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,11 @@
     <div class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#/">Como</a>
+                <!--<img src="http://static-content.como.com/comowebsite/2016/01/11142201/logo-sprite-como-1.png"  alt="">-->
+                <a class="navbar-brand" id="brand" href="#/"></a>
+            </div>
+            <div class="">
+                <h3 ng-href="#/" id="pageTitle">App Creator</h3>
             </div>
         </div>
     </div>
