--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,19 @@
 <!-- Add your site or application content here -->
 <div class="header">
     <div class="navbar navbar-inverse" role="navigation">
-        <div class="container">
+        <div class="container container-override">
             <div class="navbar-header">
                 <!--<img src="http://static-content.como.com/comowebsite/2016/01/11142201/logo-sprite-como-1.png"  alt="">-->
                 <a class="navbar-brand" id="brand" href="#/"></a>
             </div>
-            <div class="">
-                <h3 ng-href="#/" id="pageTitle">App Creator</h3>
+            <div class="row">
+                <div class="col-md-8">
+                    <h3 ng-href="#/" id="pageTitle">App Creator</h3>
+                </div>
+                <div class="col-md-2">
+                    <h3 ng-href="#/" id="pageCreator">by <a href="https://github.com/aviadhahami/como" style="color: rgba(255,255,255,0.85); text-decoration: none">Aviad Hahami</a></h3>
+                </div>
+
             </div>
         </div>
     </div>
