--- a/app/index.html
+++ b/app/index.html
@@ -28,12 +28,12 @@
                 <!--<img src="http://static-content.como.com/comowebsite/2016/01/11142201/logo-sprite-como-1.png"  alt="">-->
                 <a class="navbar-brand" id="brand" href="#/"></a>
             </div>
-            <div class="row">
-                <div class="col-md-8">
+            <div class="row width-100">
+                <div class="col-md-8 col-sm-6">
                     <h3 ng-href="#/" id="pageTitle">App Creator</h3>
                 </div>
                 <div class="col-md-2">
-                    <h3 ng-href="#/" id="pageCreator">by <a href="https://github.com/aviadhahami/como" style="color: rgba(255,255,255,0.85); text-decoration: none">Aviad Hahami</a></h3>
+                    <h3 ng-href="#/" id="pageCreator">by <a href="https://github.com/aviadhahami/como" target="_blank" style="color: rgba(255,255,255,0.85); text-decoration: none">Aviad Hahami</a></h3>
                 </div>
 
             </div>
@@ -42,7 +42,7 @@
 </div>
 
 <div class="container">
-    <div ng-view=""></div>
+    <div ng-view="" ng-cloak></div>
 </div>
 
 
