--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 <!-- Add your site or application content here -->
 <div class="header">
     <div class="navbar navbar-inverse" role="navigation">
-        <div class="container container-override">
+        <div class="container container-override top-pad-10">
             <div class="navbar-header">
                 <!--<img src="http://static-content.como.com/comowebsite/2016/01/11142201/logo-sprite-como-1.png"  alt="">-->
                 <a class="navbar-brand" id="brand" href="#/"></a>
@@ -41,7 +41,7 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container container-override">
     <div ng-view="" ng-cloak></div>
 </div>
 
