:nail_care: Done dividing the screen

--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,8 @@
     </div>
 </div>
 
-<div class="container container-override">
-    <div ng-view="" ng-cloak></div>
+<div class="container container-override height-100">
+    <div class="height-100" ng-view="" ng-cloak></div>
 </div>
 
 
