--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/main.js"></script>
 <script src="components/AppEditor/AppEditor.js"></script>
+<script src="components/devicePreview/DevicePreview.js"></script>
 <!-- endbuild -->
 </body>
 </html>
