--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/devices.min.css" type="text/css">
     <!-- endbuild -->
 </head>
 <body ng-app="comoApp">
@@ -41,7 +42,7 @@
     </div>
 </div>
 
-<div class="container container-override height-100">
+<div class="container container-override">
     <div class="height-100" ng-view="" ng-cloak></div>
 </div>
 
