--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/devices.min.css" type="text/css">
+    <link rel="stylesheet" href="components/devicePreview/DevicePreviewStyles.css">
     <!-- endbuild -->
 </head>
 <body ng-app="comoApp">
