--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
 <script src="scripts/controllers/main.js"></script>
 <script src="components/AppEditor/AppEditor.js"></script>
 <script src="components/devicePreview/DevicePreview.js"></script>
+<script src="scripts/services/pixabay.js"></script>
 <!-- endbuild -->
 </body>
 </html>
