:bug: Fixes for the build

--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,10 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/devices.min.css" type="text/css">
     <link rel="stylesheet" href="components/devicePreview/DevicePreviewStyles.css">
+    <link rel="stylesheet" href="components/AppEditor/AppEditor.css">
+    <link rel="stylesheet" href="styles/devices.min.css" type="text/css">
+
     <!-- endbuild -->
 </head>
 <body ng-app="comoApp">
